--- a/Staticar.csproj
+++ b/Staticar.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="FTP.cs" />
     <Compile Include="Generator.cs" />
+    <Compile Include="LineData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -60,7 +61,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="stub.app.config" />
+    <None Include="stub.app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
