--- a/Staticar.csproj
+++ b/Staticar.csproj
@@ -75,7 +75,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\Dropbox\Projects\miroz.com.hr\static-src\template-article.html">
