--- a/Staticar.csproj
+++ b/Staticar.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LineData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uploader.cs" />
     <Compile Include="UploadState.cs" />
     <Compile Include="Util.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
